--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@ body {
   height: 100%;
   margin: 0;
 }
+
+* {
+  text-align: center;
+}
+
+nav a {
+  padding: 10px;
+  background-color: lightblue;
+}
+
+figcaption {
+  font-size: smaller;
+}
+
+#featured-property p{
+  width: 800px;
+  text-align: center;
+}
+
+#details {
+  display: block;
+}
+
+#details div {
+  width: 25%;
+  float: left;
+  background-color: lightblue;
+}
